# wgg

./: .gitignore  Cargo.toml  Dockerfile.workflow  README.md  diesel.toml  justfile
.github/workflows/: ci.yml  docker.yml  full_tests.yml
migrations/: 20220902200312_initial_schema.sql  20221023203020_add_discount.sql  scratch.txt
migrations/2022-08-31-213018_create_api_tables/: down.sql  up.sql
migrations/2022-08-31-213053_create_system_tables/: up.sql
wgg_db_entity/: Cargo.toml  build.rs
wgg_db_entity/src/: extras.rs  lib.rs  pool.rs
wgg_db_entity/src/entity/: agg_ingredients.rs  agg_ingredients_link.rs  agg_ingredients_links.rs  cart.rs  cart_contents_aggregate.rs  cart_contents_notes.rs  cart_contents_provider.rs  cart_tally.rs  mod.rs  prelude.rs  providers.rs  users.rs  users_tokens.rs
wgg_front/: .eslintrc.cjs  .gitignore  .graphqlrc.yaml  .prettierrc  README.md  codegen.js  codegen.yml  package-lock.json  package.json  playwright.config.ts  prettier.config.cjs  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
wgg_front/src/: app.d.ts  app.html  app.postcss  forms.css  theme.postcss
wgg_front/src/lib/: notification.ts  routing.ts  user.gql  user.ts  utils.ts
wgg_front/src/lib/api/: graphql_types.ts  urql.ts
wgg_front/src/lib/api/graphql_types/: gql.ts  graphql.ts
wgg_front/src/lib/components/: ImageCarousal.svelte  OutroBlocker.svelte  PageRoot.svelte
wgg_front/src/lib/components/aggregates/: AggregateCard.svelte  CreateAggregateModal.svelte
wgg_front/src/lib/components/global_progress/: GlobalLoading.svelte  global_loading.ts
wgg_front/src/lib/components/modals/: index.ts
wgg_front/src/lib/components/navbar/: WggNavbar.svelte
wgg_front/src/lib/components/notifications/: Notifiers.svelte  Toast.svelte  notification.ts
wgg_front/src/lib/components/product_display/: CardListSkeleton.svelte  HeteroCardList.svelte
wgg_front/src/lib/components/product_list/: AddComponent.svelte  ProductCard.gql  ProductCard.svelte  ProductList.svelte
wgg_front/src/lib/components/products/: AddComponent.svelte  PriceComponent.svelte  PriceQuantityComponent.svelte  ProductCard.gql  ProductCard.svelte  ProductCardSkeleton.svelte  ProductImage.svelte  ProductImageUnknownSvg.svelte  ProductList.svelte  ProductListSkeleton.svelte  SaleLabel.svelte
wgg_front/src/lib/components/tables/: SimpleSelectableTable.svelte
wgg_front/src/lib/loading/: index.ts  provider_helper.ts
wgg_front/src/lib/state/: Cart.gql  cart.ts  index.ts  preferences.ts  providers.ts  stores.ts  user.gql  user.ts
wgg_front/src/lib/tailwind/: theme.cjs
wgg_front/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte  +page.ts
wgg_front/src/routes/(app)/: +layout.gql  +layout.svelte  +layout.ts  +page.gql  +page.svelte  +page.ts
wgg_front/src/routes/(app)/aggregates/: +layout.svelte  +page.gql  +page.svelte  +page.ts
wgg_front/src/routes/(app)/cart/: +page.svelte  +page.ts  CartOverview.svelte  CartProductLine.svelte  CartProductList.svelte
wgg_front/src/routes/(app)/login/: +page.svelte
wgg_front/src/routes/(app)/products/: +page.ts
wgg_front/src/routes/(app)/sales/: +page.gql  +page.svelte  +page.ts  SalesList.svelte  (+2 more)
wgg_front/src/routes/login/: +layout.svelte  +layout.ts  +page.svelte  +page.ts  LoginForm.gql  LoginForm.svelte
wgg_front/static/: manifest.json
wgg_front/tests/: fixture.ts  test-aggregate-product.spec.ts  test-get-product.spec.ts  test-login.spec.ts
wgg_front/tests/pageObjects/: WggLandingPage.ts  WggLoginPage.ts
wgg_front/wgg_frontend/: package-lock.json  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  vite.config.ts
wgg_front/wgg_frontend/src/: app.html  app.postcss  hooks.client.ts
wgg_front/wgg_frontend/src/routes/: +layout.svelte  +page.svelte
wgg_http/: Cargo.toml
wgg_http/src/: config.rs  lib.rs  main.rs  schema.rs  setup.rs  telemetry.rs  utils.rs
wgg_http/src/api/: ctx.rs  dataloader.rs  error.rs  mod.rs  pagination.rs  routes.rs  scheduled_jobs.rs
wgg_http/src/api/aggregate_ingredients/: mod.rs  mutation.rs  objects.rs  query.rs  service.rs
wgg_http/src/api/auth/: mod.rs  mutation.rs  objects.rs  query.rs  routes.rs  scheduled_jobs.rs
wgg_http/src/api/cart/: mod.rs  mutation.rs  objects.rs  query.rs  scheduled_jobs.rs  service.rs
wgg_http/src/api/providers/: mod.rs  object.rs  query.rs
wgg_http/src/api/search/: mod.rs
wgg_http/src/cross_system/: filter.rs  mod.rs
wgg_http/src/db/: agg_ingredients.rs  agg_ingredients_links.rs  aggregate_ingredients.rs  cart.rs  cart_contents.rs  cart_tally.rs  mod.rs  providers.rs  search_utils.rs  user.rs  users.rs  users_tokens.rs
wgg_http/src/setup/: caching.rs  first_time.rs  mod.rs  picnic.rs
wgg_http/tests/api/: auth_tests.rs  graphql.rs  main.rs  setup.rs
wgg_jumbo/: Cargo.toml
wgg_jumbo/src/: base_client.rs  clients.rs  config.rs  error.rs  ids.rs  lib.rs  models.rs  utils.rs
wgg_jumbo/tests/api/: common.rs  jumbo.rs  main.rs
wgg_picnic/: Cargo.toml
wgg_picnic/src/: config.rs  credentials.rs  error.rs  images.rs  lib.rs  models.rs
wgg_picnic/tests/api/: common.rs  main.rs  picnic.rs  setup.rs
wgg_proc/: Cargo.toml
wgg_proc/src/: lib.rs
wgg_proc/src/macros/: mod.rs  to_enum.rs
wgg_providers/: Cargo.toml
wgg_providers/src/: cache.rs  common_bridge.rs  error.rs  jumbo_bridge.rs  lib.rs  models.rs  pagination.rs  picnic_bridge.rs  sale_resolution.rs  sale_resolver.rs  scheduled_jobs.rs  wgg_provider.rs
wgg_providers/src/caching/: mod.rs  product_cache.rs  promotions_cache.rs  sale_resolution.rs
wgg_providers/src/models/: mod.rs  product.rs  providers.rs  sale.rs  search_product.rs
wgg_providers/src/providers/: common_bridge.rs  jumbo_bridge.rs  mod.rs  picnic_bridge.rs
wgg_providers/src/providers/picnic_bridge/: authentication.rs  mod.rs
wgg_providers/src/sale_resolver/: mod.rs  promotions_cache.rs  scheduled.rs
wgg_scheduler/: Cargo.toml
wgg_scheduler/src/: error.rs  job.rs  lib.rs  runner.rs  schedule.rs  scheduler.rs
wgg_schema_gen/: Cargo.toml
wgg_schema_gen/src/: main.rs
(+33 files in other folders)
