[profile.release]
incremental = true
debug = 0

[profile.dev.package."*"]
# Build dependencies with full release optimizations in debug builds since they'll rarely change
opt-level = 3

[profile.dev]
opt-level = 0
incremental = true
debug = 0

[profile.debugs]
inherits = "dev"
debug = 1

[profile.debugs.package.wgg_http]
debug = 2

[profile.debugs.package.wgg_providers]
debug = 2

[workspace]
resolver = "2"
members = ["wgg_http", "wgg_providers", "wgg_picnic", "wgg_jumbo"]
default-members = ["wgg_http"]