[profile.dev.package."*"]
# Build dependencies with full release optimizations in debug builds since they'll rarely change
opt-level = 3

[profile.dev]
opt-level = 0
incremental = true
debug = 0

[profile.debugs]
inherits = "dev"
debug = 1

[profile.debugs.package.wgg_http]
debug = 2

[profile.debugs.package.wgg_providers]
debug = 2

[profile.release]
incremental = true
debug = 0

[workspace]
resolver = "2"
members = ["wgg_http", "wgg_providers", "wgg_picnic", "wgg_jumbo", "wgg_db_entity"]
default-members = ["wgg_http"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
itertools = "0.10"

# Async
tokio = { version = "1", features = ["macros", "net", "test-util"] }
futures = "0.3"

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"