[profile.dev.package."*"]
# Build dependencies with full release optimizations in debug builds since they'll rarely change
opt-level = 3
debug = false

[profile.dev]
opt-level = 0
incremental = true
debug = false

[profile.debugs]
inherits = "dev"
debug = 1

[profile.debugs.package.wgg_http]
debug = 2

[profile.debugs.package.wgg_providers]
debug = 2

[profile.release]
incremental = true
debug = 0

[workspace]
resolver = "2"
members = ["wgg_http", "wgg_providers", "wgg_picnic", "wgg_jumbo", "wgg_db_entity", "wgg_schema_gen", "wgg_scheduler", "wgg_proc"]
default-members = ["wgg_http"]

[patch.crates-io]
async-graphql = {git = "https://github.com/Hirtol/async-graphql"}

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
itertools = "0.11.0"
arc-swap = "1.5"
once_cell = "1.14.0"

# Async
tokio = { version = "1", features = ["macros", "net", "test-util"] }
futures = "0.3"
async-trait = "0.1"

chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = { version = "0.8.0", features = ["serde"] }

sea-orm = { version = "0.12.3", features = ["sqlx-sqlite", "runtime-tokio-rustls", "with-uuid", "with-chrono", "with-time", "with-json", "with-rust_decimal"] }
sea-query = { version = "0.30.2", features = ["with-uuid", "with-chrono", "with-time", "with-json", "with-rust_decimal"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "sqlite"] }

wgg_scheduler = { path = "wgg_scheduler", features = ["tracing"]}
wgg_proc = { path = "wgg_proc" }