[package]
name = "wgg_db_entity"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = "0.9.2"

[build-dependencies]
tokio = { version = "1", features = ["full"] }
sea-orm-cli = { version = "0.9.2", default-features = false, features = ["runtime-tokio-rustls", "codegen"] }
sea-schema = { version = "0.9.3", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "discovery", "writer", "probe"] }
sea-query = { version = "0.26.3", features = ["with-uuid", "with-chrono", "with-time", "with-json", "with-rust_decimal"] }
sea-orm-codegen = "0.9.2"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = { version = "0.4" }
anyhow = "1"