[package]
name = "wgg_db_entity"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm.workspace = true

[build-dependencies]
tokio = { workspace = true, features = ["full"] }
sea-orm-cli = { version = "0.12.3", default-features = false, features = ["runtime-tokio-rustls", "codegen", "cli"] }
sea-schema = { version = "0.14.1", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "discovery", "writer", "probe"] }
sea-query.workspace = true
sea-orm-codegen = "0.12.3"
sea-query-binder = { version = "0.5.0", features = ["with-uuid", "with-chrono", "with-time", "with-json", "with-rust_decimal"] }
sqlx.workspace = true
chrono.workspace = true
anyhow.workspace = true