[package]
name = "wgg_http"
version = "0.1.0"
edition = "2021"


[lib]
doctest = false
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "wgg_http"

[dependencies]
anyhow = "1.0.60"
thiserror = "1.0.32"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
itertools = "0.10"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Web
async-graphql = { version = "4.0.6", features = ["time", "dataloader", "tracing"] }
async-graphql-axum = "4.0.6"
axum = { version = "0.5.13", features = ["ws", "headers", "tower-log", "multipart"] }
axum-extra = { version = "0.3.7", features = ["spa"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }

cookie = { version = "0.16.0", features = ["private", "percent-encode"] }
tower-cookies = { version = "0.7.0", features = ["private"] }
httpdate = "1.0.2"
#time = { version = "0.3", features = ["parsing", "serde", "macros"] }
chrono = { version = "0.4.22", features = ["serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"


# Database
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
sea-orm = { version = "0.9.2", features = ["runtime-tokio-rustls", "sqlx-sqlite", "with-chrono", "with-json", "with-uuid"] }


# Crypto
argon2 = "0.4.1"
rand = "0.8.5"

# Config
figment = { version = "0.10.6", features = ["toml", "env"] }
dotenv = "0.15.0"
platform-dirs = "0.3.0"
toml = "0.5.9"
arc-swap = "1.5"

# Providers
wgg_providers = { path = "../wgg_providers" }
wgg_db_entity = { path = "../wgg_db_entity" }

[dev-dependencies]
static_init = "1"
pretty_assertions = "1.2"
tempfile = "3"
const_format = "0.2.13"


