[package]
name = "wgg_http"
version = "0.1.0"
edition = "2021"


[lib]
doctest = false
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "wgg_http"

[dependencies]
anyhow = { workspace = true }
thiserror = {workspace = true}
tracing = {workspace = true}
itertools = {workspace = true}
secrecy = { workspace = true }
once_cell = {workspace = true}
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

# Async
tokio = { workspace = true, features = ["full"]}
futures = {workspace = true}

# Web
async-graphql = { version = "4.0.6", features = ["time", "dataloader", "tracing"] }
async-graphql-axum = "4.0.6"
axum = { version = "0.5.13", features = ["ws", "headers", "tower-log", "multipart"] }
axum-extra = { version = "0.3.7", features = ["spa"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["full"] }

cookie = { version = "0.16.0", features = ["private", "percent-encode"] }
tower-cookies = { version = "0.7.0", features = ["private"] }
httpdate = "1.0.2"

chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true}

# Database
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
sea-orm = { version = "0.9.2", features = ["runtime-tokio-rustls", "sqlx-sqlite", "with-chrono", "with-json", "with-uuid"] }

# Crypto
argon2 = "0.4.1"
rand = "0.8.5"

# Config
figment = { version = "0.10.6", features = ["toml", "env"] }
dotenv = "0.15.0"
platform-dirs = "0.3.0"
toml = "0.5.9"
arc-swap = { workspace = true }

# Providers
wgg_providers = { path = "../wgg_providers", features = ["trace-original-api"] }
wgg_db_entity = { path = "../wgg_db_entity" }
wgg_scheduler = {workspace = true}


[dev-dependencies]
static_init = "1"
pretty_assertions = "1.2"
tempfile = "3"
const_format = "0.2.13"
reqwest = { version = "0.11.11", features = ["json", "cookies", "rustls-tls", "gzip"] }


