[package]
name = "wgg_jumbo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
itertools = "0.10"

# Async
tokio = { version = "1", features = ["macros", "net", "test-util"] }
futures = "0.3"

chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_path_to_error = "0.1"
serde_json = "1.0.82"
serde_with = { version = "2.0.0", features = ["chrono_0_4"] }
reqwest = { version = "0.11.11", features = ["json", "cookies", "rustls-tls", "gzip"] }

# Crypto
dotenv = "0.15.0"
urlencoding = "2.1.0"
async-trait = "0.1.57"

[dev-dependencies]
static_init = "1"
pretty_assertions = "1.2"
tempfile = "3"
const_format = "0.2.13"
