[package]
name = "wgg_picnic"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.60"
thiserror = "1.0.32"
tracing = "0.1.36"
itertools = "0.10"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

tower = "0.4.13"
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_path_to_error = "0.1"
serde_json = "1.0.82"
reqwest = { version = "0.11.11", features = ["json", "cookies", "rustls-tls", "gzip"] }

# Crypto
md-5 = "0.10.1"
hex-literal = "0.3.4"
hex = "0.4.3"
dotenv = "0.15.0"
urlencoding = "2.1.0"

[dev-dependencies]
static_init = "1"
pretty_assertions = "1.2"
tempfile = "3"
const_format = "0.2.13"
