[package]
name = "wgg_picnic"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }

chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wgg_proc.workspace = true
serde_with = { version = "3.3.0", features = ["chrono_0_4"] }
serde_path_to_error = "0.1"
reqwest = { version = "0.11.11", default-features = false, features = ["json", "cookies", "rustls-tls", "rustls-native-certs", "gzip"] }

# Crypto
md-5 = "0.10.1"
hex-literal = "0.4.1"
hex = "0.4.3"
dotenv = "0.15.0"
urlencoding = "2.1.0"

[dev-dependencies]
pretty_assertions = "1.2"
tempfile = "3"
const_format = "0.2.13"
