[package]
name = "wgg_providers"
version = "0.1.0"
edition = "2021"

[features]
default = []
trace-original-api = []

[dependencies]
anyhow = "1.0.60"
thiserror = "1.0.32"
tracing = "0.1.36"
itertools = "0.10"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Web
tower = "0.4.13"

chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.82"
reqwest = { version = "0.11.11", features = ["json", "cookies", "rustls-tls", "gzip"] }

wgg_picnic = { path = "../wgg_picnic" }
wgg_jumbo = { path = "../wgg_jumbo" }
async-trait = "0.1"
async-graphql = { version = "4.0.6", default-features=false, features = ["chrono"] }
cached = "0.39.0"
lru = "0.8.0"
regex = "1.6.0"
once_cell = "1.14.0"


[dev-dependencies]
static_init = "1"
pretty_assertions = "1.2"
tempfile = "3"
const_format = "0.2.13"
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

