[package]
name = "wgg_providers"
version = "0.1.0"
edition = "2021"

[features]
default = []
trace-original-api = []

[dependencies]
anyhow = { workspace = true }
thiserror = {workspace = true}
tracing = {workspace = true}
itertools = {workspace = true}
secrecy = { workspace = true }

# Async
tokio = { workspace = true, features = ["full"] }
futures = {workspace = true}
async-trait = {workspace = true }

# Web
tower = "0.4.13"

chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = {workspace = true}
reqwest = { version = "0.11.11", features = ["json", "cookies", "rustls-tls", "gzip"] }

wgg_picnic = { path = "../wgg_picnic" }
wgg_jumbo = { path = "../wgg_jumbo" }
async-graphql = { version = "4.0.6", default-features=false, features = ["chrono"] }
regex = "1.6.0"

# Caching
moka = { version = "0.9.4", features = ["future"] }
once_cell = "1.14.0"
cached = "0.39.0"

# Rate Limitting
governor = { version = "0.5.0", default-features=false, features= ["std", "jitter", "quanta"] }


[dev-dependencies]
static_init = "1"
pretty_assertions = "1.2"
tempfile = "3"
const_format = "0.2.13"
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

